Mugung Server Total

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.password = root
 mybatis.mapper-locations=classpath:main.resources/**/*.xml
 
 mybatis.configuration.map-underscore-to-camel-case = true
+
+server.port = 9090
